v1.0.0/modules/schema/pages/class/ChargeProfile.adoc
= `ChargeProfile`
:toclevels: 4


+++A type of profile for financial charges.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:ChargeProfile`


| CIM standard (perspective)
| IEC62325 (Market)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/Profile.adoc[`Profile`]
*** *`ChargeProfile`*


== Slots



.Associated classes
[d2,svg,theme=4]
----
vars: {
  d2-config: {
    pad: 20
  }
}
ChargeProfile {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



BillDeterminant {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



PassThroughBill {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



ChargeProfileData {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



Bid {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



ProfileData {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



DiagramObject {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



InstanceSet {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Name {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}




ChargeProfile -> BillDeterminant: BillDeterminant


ChargeProfile -> PassThroughBill: PassTroughBill


ChargeProfile -> ChargeProfileData: ChargeProfileData


ChargeProfile -> Bid: Bid


ChargeProfile -> ProfileData: ProfileDatas


ChargeProfile -> DiagramObject: DiagramObjects


ChargeProfile -> InstanceSet: InstanceSet


ChargeProfile -> Name: Names


ChargeProfile -> ChangeSetMember: PropertiesCIMDataObject


ChargeProfile -> ChangeSetMember: TargetingCIMDataObject


legend: "" {
  style: {
    fill: transparent
    stroke: transparent
  }
  grid-rows: 3
  grid-columns: 2
  grid-gap: 10
  near: bottom-right
  iec61968_color: "" {
    style: {
      fill: "#d1e7c2"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61968_text: "IEC61968 (Enterprise)" {
    shape: text
  }
  iec61970_color: "" {
    style: {
      fill: "#eccfcb"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61970_text: "IEC61970 (Grid)" {
    shape: text
  }
  iec62325_color: "" {
    style: {
      fill: "#fffbef"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec62325_text: "IEC62325 (Market)" {
    shape: text
  }
}
----


[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<InstanceSet,`InstanceSet`>>
| 1
| xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++

| <<Bid,`Bid`>>
| 0..1
| xref::class/Bid.adoc[`Bid`]
| n/a

| <<BillDeterminant,`BillDeterminant`>>
| 0..1
| xref::class/BillDeterminant.adoc[`BillDeterminant`]
| n/a

| <<PassTroughBill,`PassTroughBill`>>
| 0..1
| xref::class/PassThroughBill.adoc[`PassThroughBill`]
| n/a

| <<frequency,`frequency`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The calculation frequency, daily or monthly.+++

| <<numberInterval,`numberInterval`>>
| 0..1
| https://w3id.org/linkml/Integer[`integer`]
| +++The number of intervals in the profile data.+++

| <<type,`type`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The type of profile.  It could be amount, price, or quantity.+++

| <<unitOfMeasure,`unitOfMeasure`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The unit of measure applied to the value attribute of the profile data.+++

| <<ChargeProfileData,`ChargeProfileData`>>
| 0..*
| xref::class/ChargeProfileData.adoc[`ChargeProfileData`]
| n/a

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++

| <<aliasName,`aliasName`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

| <<description,`description`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

| <<mRID,`mRID`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

| <<name,`name`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++

| <<DiagramObjects,`DiagramObjects`>>
| 0..*
| xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++

| <<Names,`Names`>>
| 0..*
| xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++

| <<ProfileDatas,`ProfileDatas`>>
| 0..*
| xref::class/ProfileData.adoc[`ProfileData`]
| +++A profile has profile data associated with it.+++

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..*
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Bid]
=== `Bid`


[cols="h,4",width=65%]
|===
| URI
| `cim:ChargeProfile.Bid`
| Cardinality
| 0..1
| Type
| xref::class/Bid.adoc[`Bid`]


|===

//[discrete]
[#BillDeterminant]
=== `BillDeterminant`


[cols="h,4",width=65%]
|===
| URI
| `cim:ChargeProfile.BillDeterminant`
| Cardinality
| 0..1
| Type
| xref::class/BillDeterminant.adoc[`BillDeterminant`]


|===

//[discrete]
[#ChargeProfileData]
=== `ChargeProfileData`


[cols="h,4",width=65%]
|===
| URI
| `cim:ChargeProfile.ChargeProfileData`
| Cardinality
| 0..*
| Type
| xref::class/ChargeProfileData.adoc[`ChargeProfileData`]


|===

//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#frequency]
=== `frequency`
+++The calculation frequency, daily or monthly.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ChargeProfile.frequency`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#numberInterval]
=== `numberInterval`
+++The number of intervals in the profile data.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ChargeProfile.numberInterval`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Integer[`integer`]


|===

//[discrete]
[#PassTroughBill]
=== `PassTroughBill`


[cols="h,4",width=65%]
|===
| URI
| `cim:ChargeProfile.PassTroughBill`
| Cardinality
| 0..1
| Type
| xref::class/PassThroughBill.adoc[`PassThroughBill`]


|===

//[discrete]
[#ProfileDatas]
=== `ProfileDatas`
+++A profile has profile data associated with it.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Profile.ProfileDatas`
| Cardinality
| 0..*
| Type
| xref::class/ProfileData.adoc[`ProfileData`]

| Inherited from
| xref::class/Profile.adoc[`Profile`]


|===

//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#type]
=== `type`
+++The type of profile.  It could be amount, price, or quantity.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ChargeProfile.type`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

//[discrete]
[#unitOfMeasure]
=== `unitOfMeasure`
+++The unit of measure applied to the value attribute of the profile data.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ChargeProfile.unitOfMeasure`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===


