v1.1.0/modules/schema/pages/class/ChargeProfile.adoc
= `ChargeProfile`
:toclevels: 4


+++A type of profile for financial charges.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:ChargeProfile`


| CIM standard (perspective)
| IEC62325 (Market)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/Profile.adoc[`Profile`]
*** *`ChargeProfile`*


== Slots




[cols="1,1,2,1",width=100%]
|===
| Name | Type | Description | Inherited from

| <<Bid,`Bid`>>
//| [[slots_table.Bid]]<<Bid,`Bid`>>
| 0..1 +
xref::class/Bid.adoc[`Bid`]
| _n/a_
| _n/a_

| <<BillDeterminant,`BillDeterminant`>>
//| [[slots_table.BillDeterminant]]<<BillDeterminant,`BillDeterminant`>>
| 0..1 +
xref::class/BillDeterminant.adoc[`BillDeterminant`]
| _n/a_
| _n/a_

| <<ChargeProfileData,`ChargeProfileData`>>
//| [[slots_table.ChargeProfileData]]<<ChargeProfileData,`ChargeProfileData`>>
| 0..* +
xref::class/ChargeProfileData.adoc[`ChargeProfileData`]
| _n/a_
| _n/a_

| <<PassTroughBill,`PassTroughBill`>>
//| [[slots_table.PassTroughBill]]<<PassTroughBill,`PassTroughBill`>>
| 0..1 +
xref::class/PassThroughBill.adoc[`PassThroughBill`]
| _n/a_
| _n/a_

| <<frequency,`frequency`>>
//| [[slots_table.frequency]]<<frequency,`frequency`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The calculation frequency, daily or monthly.+++
| _n/a_

| <<numberInterval,`numberInterval`>>
//| [[slots_table.numberInterval]]<<numberInterval,`numberInterval`>>
| 0..1 +
https://w3id.org/linkml/Integer[`integer`]
| +++The number of intervals in the profile data.+++
| _n/a_

| <<type,`type`>>
//| [[slots_table.type]]<<type,`type`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The type of profile.  It could be amount, price, or quantity.+++
| _n/a_

| <<unitOfMeasure,`unitOfMeasure`>>
//| [[slots_table.unitOfMeasure]]<<unitOfMeasure,`unitOfMeasure`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The unit of measure applied to the value attribute of the profile data.+++
| _n/a_

| <<ProfileDatas,`ProfileDatas`>>
//| [[slots_table.ProfileDatas]]<<ProfileDatas,`ProfileDatas`>>
| 0..* +
xref::class/ProfileData.adoc[`ProfileData`]
| +++A profile has profile data associated with it.+++
| xref::class/Profile.adoc[`Profile`]

| <<DiagramObjects,`DiagramObjects`>>
//| [[slots_table.DiagramObjects]]<<DiagramObjects,`DiagramObjects`>>
| 0..* +
xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<InstanceSet,`InstanceSet`>>
//| [[slots_table.InstanceSet]]<<InstanceSet,`InstanceSet`>>
| 1 +
xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<Names,`Names`>>
//| [[slots_table.Names]]<<Names,`Names`>>
| 0..* +
xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
//| [[slots_table.PropertiesCIMDataObject]]<<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1 +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
//| [[slots_table.TargetingCIMDataObject]]<<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..* +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<aliasName,`aliasName`>>
//| [[slots_table.aliasName]]<<aliasName,`aliasName`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<description,`description`>>
//| [[slots_table.description]]<<description,`description`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<mRID,`mRID`>>
//| [[slots_table.mRID]]<<mRID,`mRID`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<name,`name`>>
//| [[slots_table.name]]<<name,`name`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.aliasName,&#10548;>>
--
////


//[discrete]
[#Bid]
=== `Bid`



[cols="h,4",width=65%]
|===
| URI
| `cim:ChargeProfile.Bid`
| Cardinality
| 0..1
| Type
| xref::class/Bid.adoc[`Bid`]


|===

////
[.text-left]
--
<<slots_table.Bid,&#10548;>>
--
////


//[discrete]
[#BillDeterminant]
=== `BillDeterminant`



[cols="h,4",width=65%]
|===
| URI
| `cim:ChargeProfile.BillDeterminant`
| Cardinality
| 0..1
| Type
| xref::class/BillDeterminant.adoc[`BillDeterminant`]


|===

////
[.text-left]
--
<<slots_table.BillDeterminant,&#10548;>>
--
////


//[discrete]
[#ChargeProfileData]
=== `ChargeProfileData`



[cols="h,4",width=65%]
|===
| URI
| `cim:ChargeProfile.ChargeProfileData`
| Cardinality
| 0..*
| Type
| xref::class/ChargeProfileData.adoc[`ChargeProfileData`]


|===

////
[.text-left]
--
<<slots_table.ChargeProfileData,&#10548;>>
--
////


//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.description,&#10548;>>
--
////


//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.DiagramObjects,&#10548;>>
--
////


//[discrete]
[#frequency]
=== `frequency`
+++The calculation frequency, daily or monthly.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ChargeProfile.frequency`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

////
[.text-left]
--
<<slots_table.frequency,&#10548;>>
--
////


//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.InstanceSet,&#10548;>>
--
////


//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.mRID,&#10548;>>
--
////


//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.name,&#10548;>>
--
////


//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.Names,&#10548;>>
--
////


//[discrete]
[#numberInterval]
=== `numberInterval`
+++The number of intervals in the profile data.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ChargeProfile.numberInterval`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Integer[`integer`]


|===

////
[.text-left]
--
<<slots_table.numberInterval,&#10548;>>
--
////


//[discrete]
[#PassTroughBill]
=== `PassTroughBill`



[cols="h,4",width=65%]
|===
| URI
| `cim:ChargeProfile.PassTroughBill`
| Cardinality
| 0..1
| Type
| xref::class/PassThroughBill.adoc[`PassThroughBill`]


|===

////
[.text-left]
--
<<slots_table.PassTroughBill,&#10548;>>
--
////


//[discrete]
[#ProfileDatas]
=== `ProfileDatas`
+++A profile has profile data associated with it.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Profile.ProfileDatas`
| Cardinality
| 0..*
| Type
| xref::class/ProfileData.adoc[`ProfileData`]

| Inherited from
| xref::class/Profile.adoc[`Profile`]


|===

////
[.text-left]
--
<<slots_table.ProfileDatas,&#10548;>>
--
////


//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.PropertiesCIMDataObject,&#10548;>>
--
////


//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.TargetingCIMDataObject,&#10548;>>
--
////


//[discrete]
[#type]
=== `type`
+++The type of profile.  It could be amount, price, or quantity.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ChargeProfile.type`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

////
[.text-left]
--
<<slots_table.type,&#10548;>>
--
////


//[discrete]
[#unitOfMeasure]
=== `unitOfMeasure`
+++The unit of measure applied to the value attribute of the profile data.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ChargeProfile.unitOfMeasure`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

////
[.text-left]
--
<<slots_table.unitOfMeasure,&#10548;>>
--
////





== Used by


[cols="1,1",width=65%]
|===
| Source class | Slot name



| xref::class/Bid.adoc[`Bid`] | xref::class/Bid.adoc#ChargeProfiles[`ChargeProfiles`]



| xref::class/BillDeterminant.adoc[`BillDeterminant`] | xref::class/BillDeterminant.adoc#ChargeProfile[`ChargeProfile`]



| xref::class/ChargeProfileData.adoc[`ChargeProfileData`] | xref::class/ChargeProfileData.adoc#ChargeProfile[`ChargeProfile`]



| xref::class/PassThroughBill.adoc[`PassThroughBill`] | xref::class/PassThroughBill.adoc#ChargeProfiles[`ChargeProfiles`]


|===

